--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://zverkovnikita09.github.io/TodoApp",
+  "homepage": "https://zverkovnikita09.github.io/TodoApp",
   "name": "react-app",
   "version": "0.1.0",
   "private": true,
